# pyscript

./: .env.example  .gitignore  README.md  dump-sensor-from-sql.py  main.py  process_user_ids.py  pyproject.toml  query-campaign.py  report-campaign.py  report.sh  run.sh  search_user_id.py  update-user-hub.sh
appsflyer/: analyze_appsflyer.py  download_mmp_raw_data.py  parse_ttclid.py  pyproject.toml
currency/: .env.example  README.md  pyproject.toml  syn_history.sh
currency/currency_sync/: __init__.py  main.py
currency/currency_sync/db/: currency.sql  database.py
currency/currency_sync/providers/: __init__.py  base.py  currencyapi.py  exchangerate_api.py
currency/currency_sync/utils/: logger.py
report/: README.md  pyproject.toml  query-campaign.py  query_no_campaign_users.sql  r.sh  report-campaign.py  report_campaign_to_sensor_supplementally.sh  sql_to_csv.py
sensor/: conv_android_adjust.py  conv_ios_adjust.py  dump-sensor-from-sql.py  env.example  find_campaign_data.py  format_to_adjust.sh  merge.py  pyproject.toml  query_af_passback_ios.sql  run.sh  sql_to_csv.py  sql_to_csv_v3.py
sensor/config/: query_ads_events.sql  query_af_passback_android.sql  query_af_passback_ios.sql  query_media_source_empty_user.sql
shell/: aws_secure_provider.sh  claude-wrapper.sh
single/: README.md  adjust_local_amount.py  apple_reco.py  cuid.json  download-sku.sh  fix-order-local-amount.py  md_to_excel.py  move_order.py  pyproject.toml  query_apple_orders.py  requirements.txt  run.sh  search_did.py  stat-ad-daily.py  stat-ad-new-user-daily.py  t.py  update-local-amount.sh  update_order.sql
single/.cursor/rules/: down-apple-transation.mdc  project-fix-order-local-amount.mdc  query-user-key.py  single-python-script.mdc
single/local-amount/: fix-order-local-amount.markdown  requirements.txt
