[project]
name = "currency_sync"
version = "0.1.0"
description = ""
authors = [
    {name = "freenux", email = "freegly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "mysql-connector-python>=8.0.33",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[project.scripts]
currency_sync = "currency_sync.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
