[project]
name = "campaign-supplementary-report-to-sensor"
version = "0.1.0"
description = "A Python project for generating campaign reports"
authors = [
    {name = "fushengbao", email = "fushengbao@ihuayue.cn"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "mysql-connector-python>=9.2.0,<10.0.0",
    "mysql-connector>=2.2.9,<3.0.0",
    "sensorsanalyticssdk>=1.11.0",
]
