[tool.poetry]
name = "single"
version = "0.1.0"
description = ""
authors = ["freenux <freegly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
price-parser = "^0.4.0"
openai = "^1.75.0"
pymysql = "^1.1.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
